@@ -3,6 +3,16 @@ SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
 Developers:  mlevy
+Tag Date:    03 April 2013
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130403
+Tag Summary: Remove epbal scale factor from mct and esmf drivers
+
+Files Modified:
+M            45561   drivers/cpl_mct/ocn_comp_mct.F90
+M            45561   drivers/cpl_esmf/ocn_comp_esmf.F90
+===============================================================================
+Tag Creator: mlevy
+Developers:  mlevy
 Tag Date:    12 March 2013
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130312a
 Tag Summary: Fix in build-namelist to properly name diag output in multi-
